# reports

./: .gitmodules  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  on-create-command.sh
.github/workflows/: ci.yml  create-pr.yml
csv/dir/1066-dir/: .pdf_metadata.json  1066-dir-page-1-table-1.csv  1066-dir-page-10-table-1.csv  1066-dir-page-100-table-1.csv  1066-dir-page-101-table-1.csv  1066-dir-page-102-table-1.csv  1066-dir-page-103-table-1.csv  1066-dir-page-104-table-1.csv  1066-dir-page-105-table-1.csv  1066-dir-page-106-table-1.csv  1066-dir-page-107-table-1.csv  1066-dir-page-108-table-1.csv  1066-dir-page-109-table-1.csv  1066-dir-page-11-table-1.csv  1066-dir-page-110-table-1.csv  1066-dir-page-111-table-1.csv  1066-dir-page-112-table-1.csv  1066-dir-page-113-table-1.csv  1066-dir-page-114-table-1.csv  1066-dir-page-115-table-1.csv  1066-dir-page-116-table-1.csv  1066-dir-page-117-table-1.csv  1066-dir-page-118-table-1.csv  1066-dir-page-119-table-1.csv  1066-dir-page-12-table-1.csv  1066-dir-page-120-table-1.csv  1066-dir-page-121-table-1.csv  1066-dir-page-122-table-1.csv  1066-dir-page-123-table-1.csv  1066-dir-page-124-table-1.csv  1066-dir-page-125-table-1.csv  1066-dir-page-126-table-1.csv  1066-dir-page-127-table-1.csv  1066-dir-page-128-table-1.csv  1066-dir-page-129-table-1.csv  1066-dir-page-13-table-1.csv  1066-dir-page-130-table-1.csv  1066-dir-page-131-table-1.csv  1066-dir-page-132-table-1.csv  1066-dir-page-133-table-1.csv  (+176 more)
csv/dir/1072-dir/: .pdf_metadata.json  1072-dir-page-1-table-1.csv  1072-dir-page-10-table-1.csv  1072-dir-page-100-table-1.csv  1072-dir-page-101-table-1.csv  1072-dir-page-102-table-1.csv  1072-dir-page-103-table-1.csv  1072-dir-page-104-table-1.csv  (+570 more)
scripts/: install-system-deps.sh  install.sh
src/pdf_table_extractor/: __init__.py  extract_tables.py  metadata.py  pdf_processor.py
tests/: __init__.py  test_metadata.py
(+57489 files in other folders)
